Mobile view: fix price tag overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1571,7 +1571,7 @@ ul.nav_1 li a {
     font-size: 1.05em;
 }
 .mid-2 p {
-    font-size: 0.75em;
+    font-size: 0.5em;
 }
 .b-wrapper1.long-img {
     padding-top: 14em;
